gcc/testsuite/rust/rustc/ui/if/ifmt-bad-format-args.rs
fn main() {
    format_args!(); // { dg-error "" "" { target *-*-* } }
    format_args!(|| {}); // { dg-error "" "" { target *-*-* } }
}

